# USDA

./: .gitignore  Dockerfile  README.md  README_ASYNC.md  __init__.py  config.py  deleteme.css  deleteme.txt  helpers.py  helpers_async.py  label_embed_demo.html  models.py  pyproject.toml  requirements.txt  server.py  server_async.py  test_label.py  test_label_api.py  test_label_hidden_business.json  test_label_missing_title.json  test_label_request.json
curado_usda/: __init__.py
curado_usda/api/: __init__.py
curado_usda/api/async/: __init__.py
curado_usda/api/sync/: __init__.py
curado_usda/core/: __init__.py  config.py
curado_usda/models/: __init__.py
curado_usda/services/: __init__.py
curado_usda/services/async/: __init__.py
curado_usda/services/sync/: __init__.py
curado_usda/utils/: __init__.py
routes/: __init__.py  ingredient.py  ingredient_async.py  label.py  label_async.py  recipe.py  recipe_async.py  search.py  search_async.py
services/: __init__.py  cache_service.py  ingredient_service.py  label_generator.py  label_service.py  label_service_async.py  rate_limiter.py  recipe_service.py  recipe_service_async.py  search_service.py
static/: label_editor.html  test.html
templates/: label_editor.html  label_template.html
tests/: __init__.py  conftest.py  helpers.py  test_api_endpoints.py  test_ingredient_route.py  test_label_endpoints.py  test_label_generator.py  test_label_route.py  test_nutrient_extraction.py  test_pineapple_juice.py  test_server.py
