# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curado_usda"
version = "0.1.0"
description = "FastAPI wrapper around USDA FoodData Central for nutrition and recipes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.95.0,<1.0.0",
  "uvicorn[standard]>=0.22.0,<1.0.0",
  "requests>=2.31.0,<3.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
testing = [
  "pytest>=7.0.0,<8.0.0",
  "pytest-asyncio>=0.21.0,<1.0.0",
  "httpx>=0.24.0,<1.0.0",
]
